DSS-1312 : allows to use MOCCA with JDK 9-10